# isa-llm

./: .env  .gitingore  README.md  analyze_data.ipynb  collect_data.ipynb  collect_data_with_open_router.ipynb  main.ipynb  main.py  pyproject.toml
analysis/: CER_mean_summarized_evaluator_X_CONDITION_X_reference.csv  CER_mean_summarized_evaluator_X_CONDITION_X_reference_X_SET.csv  accuracy_summarized_evaluator_X_CONDITION.csv  accuracy_summarized_evaluator_X_CONDITION_X_response.csv  accuracy_summarized_evaluator_X_CONDITION_X_response_X_SET.csv  certainty_summarized_EVAL_X_CONDITION.csv  certainty_summarized_EVAL_X_CONDITION_X_REF.csv  certainty_summarized_EVAL_X_CONDITION_X_SET_REF.csv  confusion_matrix_gpt-5.4-mini-2026-03-17.txt  confusion_matrix_gpt-5.4-nano-2026-03-17.txt  confusion_matrix_gpt-5.4-nano-2026-03-17_indirect.txt  confusion_matrix_gpt-5.4.txt  confusion_matrix_gpt-5.4_all.txt  confusion_matrix_gpt-5.4_direct.txt  roc_auc_gpt-5.4-nano-2026-03-17.txt
data/: iCO-Eval2_stimuli.csv  iCO-Eval2_summarizedRatings.csv
reports/tables/: CER_mean_anova_gpt-5.4-mini-2026-03-17.csv  CER_mean_anova_gpt-5.4-nano-2026-03-17.csv  CER_mean_anova_gpt-5.4.csv  (+10 more)
results/: gpt-5.4-mini-2026-03-17_score.csv  gpt-5.4-mini-2026-03-17_score_run1.csv  gpt-5.4-mini-2026-03-17_score_run2.csv  gpt-5.4-mini-2026-03-17_score_run3.csv  gpt-5.4-nano-2026-03-17_score.csv  gpt-5.4-nano-2026-03-17_score_run1.csv  gpt-5.4-nano-2026-03-17_score_run2.csv  gpt-5.4-nano-2026-03-17_score_run3.csv  gpt-5.4_score.csv  gpt-5.4_score_run1.csv  gpt-5.4_score_run2.csv  gpt-5.4_score_run3.csv
(+4 files in other folders)
